--- a/correios-integration/src/main/resources/messages.properties
+++ b/correios-integration/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 request.validation.error=requisicao contendo valores invalidos
-httpMethod.notAllowed=Metodo http \"{0}\" nao suportado
+httpMethod.notAllowed=Metodo http ''{0}'' nao suportado
+unsupported.mediaType=MediaType ''{0}'' nao suportado pela alicacao. Utilize ''application/json''
 generic.error=Erro generico na aplicacao
 cep.notFound=Cep nao encontrado
 cep.found=Cep encontrado com sucesso
