Evolucao do gerenciamento de enderecos

--- a/address-manager/src/main/resources/messages.properties
+++ b/address-manager/src/main/resources/messages.properties
@@ -1,3 +1,10 @@
 request.validation.error=requisicao contendo valores invalidos
-httpMethod.notAllowed=Metodo http \"{0}\" nao suportado
+httpMethod.notAllowed=Metodo http ''{0}'' nao suportado
+unsupported.mediaType=MediaType ''{0}'' nao suportado pela alicacao. Utilize ''application/json''
 generic.error=Erro generico na aplicacao
+address.create.success=Endereco criado com sucesso
+address.update.success=Endereco atualizado com sucesso
+address.remove.success=Endereco removido com sucesso
+address.find.success=Endereco encontrado com sucesso
+address.notFound=Endereco nao encontrado. addressId={0}
+address.invalid.cep=CEP invalido. cep={0}
